--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     <span class="example-spacer"></span>
     <div class="menu">
       <div class="is-hidden-desktop is-hidden-tablet" id="menu">
-        <div id="menu-bar" (click)="menuOnClick()">
+        <!-- <div id="menu-bar" (click)="menuOnClick()">
           <div id="bar1" class="bar"></div>
           <div id="bar2" class="bar"></div>
           <div id="bar3" class="bar"></div>
@@ -34,7 +34,43 @@
                 Sign Out
               </li>
           </ul>
-        </nav> 
+        </nav>  -->
+        <input (click)="onWrapper()"  type="checkbox" class="checkbox-menu" id="active">
+        <div class="bars">
+<label id="menu-bar" for="active" class="menu-btn"> <div id="bar1" class="bar"></div>
+            <div id="bar2" class="bar"></div>
+            <div id="bar3" class="bar"></div>
+          </label>
+        </div>
+        <div  [class.activewrap]="active_wrap" [class.disactivewrap]="disactive_wrap" class="wrapper">
+          <ul>
+            <li (click)="onMenuItemClick()">
+                <a routerLink="home" routerLinkActive="router-link-active" >
+                Home
+              </a>
+             </li>
+             <li (click)="onMenuItemClick()" *ngIf="!signedin" color="primary">
+              <a routerLink="signup" routerLinkActive="router-link-active" >
+              Sign Up
+            </a>
+           </li>
+           <li (click)="onMenuItemClick()" *ngIf="!signedin" color="primary">
+            <a routerLink="signin" routerLinkActive="router-link-active" >
+            Sign In
+          </a>
+         </li>
+             <li (click)="onMenuItemClick()" *ngIf="signedin" color="primary" >
+              <a [routerLink]="['myUrls']" routerLinkActive="router-link-active">
+              My URLs
+            </a>
+           </li>
+                        <li>
+              <a (click)="onSignOut()" *ngIf="signedin">
+                Sign Out
+              </a>
+                        </li>
+    </ul>
+    </div>
       </div>
       
       <div class="menu-bg" id="menu-bg"></div>
