--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,3 +1,9 @@
+.title{
+    margin-top: 60px;
+    margin-bottom: 30px;
+    color:white;
+}
+
 :host{
     display: block;
     margin-bottom: 1em;
