--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,11 +4,32 @@
     align-items: flex-end;
     z-index: 2;
   }
-  
+  #opacity-bg{
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  background-color: #2eb086;
+  }
+  #change-opacity-bg{
+    width: 817px;
+    height: 200vh;
+    background-color: #2eb086;
+  opacity: 0.4;
+    display: block;
+    margin-left: -63px;
+    margin-right: -16px;
+    z-index: 1;
+}
+
+.activewrap{
+  visibility:visible;
+}
+.disactivewrap{
+  visibility:hidden;
+}
   #menu-bar {
     width: 45px;
     height: 40px;
-    margin: 20px 41px 0 0;
     cursor: pointer;
   }
   
@@ -77,12 +98,7 @@
   
   .change {
     display: block;
-  }
-  
-  .change .bar {
-    background-color: white;
-  }
-  
+  } 
   .change #bar1 {
     transform: translateY(4px) rotateZ(-45deg);
   }
@@ -110,4 +126,111 @@ a{
 .logo{
     font-family: Righteous;
     color: #2eb086;
+}
+
+
+/* 
+new */
+
+.wrapper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+ /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
+  /* clip-path: circle(25px at calc(0% + 45px) 45px); */
+  background:whitesmoke;
+
+
+  clip-path: circle(25px at calc(100% - 45px) 45px);
+  transition: all 0.3s ease-in-out;
+}
+#active:checked ~ .wrapper{
+  clip-path: circle(75%);
+}
+.menu-btn{
+  position: absolute;
+  z-index: 2;
+  right: 20px;
+  /* left: 20px; */
+  top: 20px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+ /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
+  background: transparent;
+  transition: all 0.3s ease-in-out;
+}
+#active:checked ~ .menu-btn{
+  color: #fff;
+}
+#active:checked ~ .menu-btn i:before{
+  content: "\f00d";
+}
+.wrapper ul{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+}
+.wrapper ul li{
+  margin: 15px 0;
+}
+.wrapper ul li a{
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 500;
+    color:#2eb086;
+  position: relative;
+  line-height: 50px;
+  transition: all 0.3s ease;
+}
+
+.wrapper ul li a:hover:after{
+  transform: scaleY(1);
+}
+.wrapper ul li a:hover{
+  color: #fff;
+}
+input[type="checkbox"]{
+  display: none;
+}
+.content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  text-align: center;
+  width: 100%;
+  color: #202020;
+}
+.content .title{
+  font-size: 40px;
+  font-weight: 700;
+}
+.content p{
+  font-size: 35px;
+  font-weight: 600;
+}
+
+@keyframes rotate {
+  0%{
+    filter: hue-rotate(0deg);
+  }
+  100%{
+    filter: hue-rotate(360deg);
+  }
 }
