--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-  <app-header></app-header>
+  <app-header [signedin]="signedin" (loggedEvent)="onLogin($event)"></app-header>
   <router-outlet></router-outlet>
 
