--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,24 +1,34 @@
 <div>
-    <div class="form-field">
-        <mat-form-field class="input-login">
-            <mat-label>{{label}}</mat-label>
-            <input type="{{inputType}}" matInput [formControl]="control" placeholder="{{label}}" autocomplete="off">
-        </mat-form-field>
-    </div>
-    
-    
-    <!-- error handling -->
-    <div class="is-flex has-text-centered is-justify-content-center ui pointing red basic label" *ngIf="showErrors()">
-        <mat-error *ngIf="control.errors!['required']">required</mat-error>
-        <mat-error *ngIf="control.errors!['minlength']">
-            value you entered is {{control.errors!['minlength']['actualLength']}} characthers long,
-            but it must be at least {{control.errors!['minlength']['requiredLength']}}
-        </mat-error>
-        <mat-error *ngIf="control.errors!['maxlength']">
-            value you entered is {{control.errors!['maxlength']['actualLength']}} characthers long,
-            but it cannot be longer than {{control.errors!['maxlength']['requiredLength']}} characthers
-        </mat-error>
-        <mat-error *ngIf="control.errors!['pattern']">Invalid Format</mat-error>
-    </div>
+  <div class="form-field">
+    <mat-form-field class="input-login">
+      <mat-label>{{ label }}</mat-label>
+      <input
+        type="{{ inputType }}"
+        matInput
+        [formControl]="control"
+        placeholder="{{ label }}"
+        autocomplete="off"
+      />
+    </mat-form-field>
+  </div>
+
+  <!-- error handling -->
+  <div
+    class="is-flex has-text-centered is-justify-content-center ui pointing red basic label"
+    *ngIf="showErrors()"
+  >
+    <mat-error *ngIf="control.errors!['required']">required</mat-error>
+    <mat-error *ngIf="control.errors!['minlength']">
+      value you entered is
+      {{ control.errors!["minlength"]["actualLength"] }} characthers long, but
+      it must be at least {{ control.errors!["minlength"]["requiredLength"] }}
+    </mat-error>
+    <mat-error *ngIf="control.errors!['maxlength']">
+      value you entered is
+      {{ control.errors!["maxlength"]["actualLength"] }} characthers long, but
+      it cannot be longer than
+      {{ control.errors!["maxlength"]["requiredLength"] }} characthers
+    </mat-error>
+    <mat-error *ngIf="control.errors!['pattern']">Invalid Format</mat-error>
+  </div>
 </div>
-    
