--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Spartan:wght@700&family=Righteous&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Spartan:wght@700&family=Righteous&display=swap");
 
 html,
 body {
@@ -11,10 +9,25 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: rgb(66,252,193);
-  background: -moz-linear-gradient(0deg, rgba(66,252,193,1) 0%, rgba(106,189,163,1) 35%, rgba(46,176,134,1) 100%);
-  background: -webkit-linear-gradient(0deg, rgba(66,252,193,1) 0%, rgba(106,189,163,1) 35%, rgba(46,176,134,1) 100%);
-  background: linear-gradient(0deg, rgba(66,252,193,1) 0%, rgba(106,189,163,1) 35%, rgba(46,176,134,1) 100%);
+  background: rgb(66, 252, 193);
+  background: -moz-linear-gradient(
+    0deg,
+    rgba(66, 252, 193, 1) 0%,
+    rgba(106, 189, 163, 1) 35%,
+    rgba(46, 176, 134, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    0deg,
+    rgba(66, 252, 193, 1) 0%,
+    rgba(106, 189, 163, 1) 35%,
+    rgba(46, 176, 134, 1) 100%
+  );
+  background: linear-gradient(
+    0deg,
+    rgba(66, 252, 193, 1) 0%,
+    rgba(106, 189, 163, 1) 35%,
+    rgba(46, 176, 134, 1) 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#42fcc1",endColorstr="#2eb086",GradientType=1);
 }
 h1 {
@@ -37,16 +50,16 @@ h1 {
   z-index: 0;
 }
 
-.input-login .mat-form-field-infix{
+.input-login .mat-form-field-infix {
   width: 256px;
 }
 html {
-overflow: hidden;
-height: 100%;
+  overflow: hidden;
+  height: 100%;
 }
 
 body {
-height: 100%;
-overflow: auto;
-max-width: 100vw;
+  height: 100%;
+  overflow: auto;
+  max-width: 100vw;
 }
