--- a/src/app/auth/signup/errorModal.component.html
+++ b/src/app/auth/signup/errorModal.component.html
@@ -1,6 +1,23 @@
 <div mat-dialog-content>
-  <mat-error *ngFor="let item of dialogTitle">{{ item.msg }}</mat-error>
+  <div *ngIf="dialogcreated">
+    <h3 class="created" color="accent">{{dialogcreated}}</h3>
+
+  </div>
+  <span *ngIf="dialogTitle">
+
+    <span *ngIf="dialogTitle.msg">
+      <mat-error *ngFor="let item of dialogTitle">{{ item.msg }}</mat-error>
+    </span>
+    <span *ngIf="dialogTitle.message">
+      <mat-error>{{dialogTitle.message }}</mat-error>
+    </span>
+  </span>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
+  <button *ngIf="dialogcreated" mat-raised-button color="accent">
+    <a [routerLink]="['signin']" mat-dialog-close routerLinkActive="router-link-active">
+      Login
+    </a>
+  </button>
+  <button *ngIf="dialogTitle" mat-button mat-dialog-close>Close</button>
 </div>
