fix route on shorting

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,9 +30,9 @@
         <div *ngIf="genSlug" class="res">
           <a
             target="_blank"
-            [routerLink]="genSlug"
+            [routerLink]="['../', genSlug]"
             routerLinkActive="router-link-active"
-            >baseUrl/{{ genSlug }}</a
+            >shortangular.netlify.app/#/{{ genSlug }}</a
           >
 
           <button
