Revert "fix route on shorting"
This reverts commit c9ecb22e64283106c92039a7d5badfd0897b7909.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,9 +30,9 @@
         <div *ngIf="genSlug" class="res">
           <a
             target="_blank"
-            [routerLink]="['../', genSlug]"
+            [routerLink]="genSlug"
             routerLinkActive="router-link-active"
-            >shortangular.netlify.app/#/{{ genSlug }}</a
+            >baseUrl/{{ genSlug }}</a
           >
 
           <button
