fix route on shorting

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
             target="_blank"
             [routerLink]="['../', genSlug]"
             routerLinkActive="router-link-active"
-            >shortangular.netlify.app/{{ genSlug }}</a
+            >shortangular.netlify.app/#/{{ genSlug }}</a
           >
 
           <button
