add num of clicks on marker

--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -15,8 +15,8 @@
           >
             <thead>
               <tr>
-                <th>target</th>
-                <th>slug</th>
+                <th>Target</th>
+                <th>Slug</th>
               </tr>
             </thead>
             <tbody>
