--- a/src/styles.css
+++ b/src/styles.css
@@ -64,12 +64,15 @@ body {
   max-width: 100vw;
 }
 .marker {
+  text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   background-size: cover;
   width: 20px;
   height: 20px;
   border-radius: 50%;
   cursor: pointer;
-  color: white;
 }
 
 .marker-major{
@@ -77,6 +80,8 @@ body {
 }
 
 .marker-minor{
+  width: 15px;
+  height: 15px;
   background-color: #9ae2cb;
 }
 .where-title{
