change modal title

--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -50,7 +50,7 @@
   <div class="modal-background"></div>
   <div class="modal-card m-2 ">
     <header class="modal-card-head">
-      <p class="modal-card-title">Clicks</p>
+      <p class="modal-card-title">Map of Clicks</p>
       <button (click)="closeInfosModal()" class="delete" aria-label="close"></button>
     </header>
     <section class="modal-card-body" *ngIf="click_from">
